# gpt_serviece_for_engineer

./: .gitignore  README.md  pyproject.toml  wrapper.py
asset/: lumar_toxic.xlsx
asset/ll_list/: ll_list.xlsx
faiss_index/: index.pkl
files/Profile/: Profile.txt
gpt_servieces/: baseraptor.py  doc_reader.py  embedding_faiss.py  input2.md  llama_faiss_embedding.py  mdtopdf.py  pdf_extraction copy.py  pdf_extraction.py  pypymuuu.py  text_embedding.py
gpts/: RAG_Feedback2.py  embedding_page.py  engineering_chatbot.py  excelshow.py  faq2.py  ll_search.py  main_page.py  page.py  page2_embedding copy 2.py  page2_embedding copy.py  page2_embedding.py  page3_embedding copy 2.py  page3_embedding copy.py  page3_embedding.py  page3_engineering_chatbot.py  rfp_chatbot.py  rfp_toxics.py  section2.py  start_sample.py  streamlit_test.py  upload_rfp.py
gpts2/: client_comment copy.py  client_comment.py  how2use.py  main_app copy 2.py  main_app.py  main_page.py  main_page2.py  rfP_search.py  rfp_toxics.py  start_sample copy.py  start_sample.py  upload_itb.py
icon/: GPT_ICON.jfif  pageset.py
icon/tables/: page_1_table_1.csv  page_2_table_1.csv  page_3_table_1.csv
icon/text/: page_1.txt  page_2.txt  page_3.txt  page_4.txt  page_5.txt  page_6.txt  page_7.txt
tests/: __init__.py  chat_with_documents.py  llama_download.py  llama_test.py  mkdemo.py  sss.py  streamlit_test.py  test.py
tests/streamlit_agent/: mrkl_demo.py  simple_feedback_copy.py
