[tool.poetry]
name = "gpt-serviece-for-engineer"
version = "0.1.0"
description = ""
authors = ["JPark <qkrwogus88@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.14"
langchain-core = "^0.1.40"
langchain-community = "^0.0.31"
openpyxl = "^3.1.2"
streamlit = "^1.33.0"
pandas = "^2.2.1"
tiktoken = "^0.6.0"
openai = "^1.16.2"
langchain-openai = "^0.1.1"
pymupdf = "^1.24.1"
python-dotenv = "^1.0.1"
umap = "^0.1.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
